objects/Reviewer_Workspace__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Approval__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <label>Approval Level</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Level_link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Id,  Approval_Level__c)</formula>
        <label>Approval Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Record_Type__c</fullName>
        <formula>Approval__r.RecordType.Name</formula>
        <label>Approval Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval</label>
        <referenceTo>Approval__c</referenceTo>
        <relationshipName>Approval_workspaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Approval__r.Opportunity_Id__c</formula>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Approval__r.Opportunity_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Approval__r.Opportunity_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Value__c</fullName>
        <formula>Approval__r.Total_Opportunity_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Workspace</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>W-{00000}</displayFormat>
        <label>Reviewer Workspace Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workspaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>